--- a/style.css
+++ b/style.css
@@ -19,11 +19,15 @@ body{
   text-transform: uppercase;
   text-align: center;
 }
-.navbar ul li{
+.navbar ul li {
   font-size: 15px;
   list-style: none;
 }
+.navbar ul li a:hover{
+  text-decoration: none;
+  color: white;
 
+}
 .chisiamo{
   background-color: #53BD9D;
   padding: 50px 0;
@@ -32,8 +36,17 @@ body{
   width: 30px;
   height: auto;
 } */
+
+.dividers{
+  border-bottom: 3px solid white;
+  margin-top: 20px;
+}
+.glyphicon-star{
+  font-size: 40px;
+}
 .chisiamo p{
   text-transform: none;
+  margin-top: 20px;
 }
 img{
   width: 200px;
