--- a/style.css
+++ b/style.css
@@ -39,30 +39,60 @@ body{
  text-decoration: none;
 
 }
-.chisiamo{
+
+#chisiamo{
   background-color: #53BD9D;
-  padding: 100px 0;
+  padding: 200px 0;
 }
 
 
-.dividers{
+#chisiamo .dividers{
   border-bottom: 3px solid white;
   margin-top: 20px;
 }
-.glyphicon-star{
+#chisiamo .glyphicon-star{
   font-size: 40px;
+  color: white;
 }
 
-.chisiamo h1{
+#chisiamo h1{
   font-size: 60px;
   font-weight: bold;
 }
-.chisiamo p{
+#chisiamo p{
   font-size: 25px;
   text-transform: none;
   margin-top: 20px;
 }
-img{
+#chisiamo img{
   width: 200px;
   height: auto;
 }
+
+#portfolio h2{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: bold;
+  color: #2C3E50;
+}
+#portfolio .dividers{
+
+  border-bottom: 3px solid #2C3E50;
+  margin-top: 20px;
+}
+#portfolio .glyphicon-star{
+  font-size: 40px;
+  color: #2C3E50;
+  text-align:center;
+}
+.portfolio-img{
+  width: 90%;
+  margin: 5% 5%;
+  
+}
+
+#portfolio .portfolio-img img{
+  width: 100%;
+  height: auto;
+  margin: 2% 2%;
