--- a/style.css
+++ b/style.css
@@ -89,10 +89,40 @@ body{
 .portfolio-img{
   width: 90%;
   margin: 5% 5%;
-  
+
 }
 
 #portfolio .portfolio-img img{
   width: 100%;
   height: auto;
   margin: 2% 2%;
+
+}
+
+
+#about{
+  background-color: #53BD9D;
+}
+#about h2{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+}
+#about .glyphicon-star{
+  font-size: 40px;
+  color: white;
+  text-align: center;
+}
+#about .dividers{
+
+  border-bottom: 3px solid white;
+  margin-top: 20px;
+}
+#about p{
+  color: white;
+  text-align: left;
+  margin: 5% 10%;
+
+}
