--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body{
 
 #about{
   background-color: #53BD9D;
+  padding: 50px 0;
 }
 #about h2{
   text-align: center;
@@ -125,4 +126,39 @@ body{
   text-align: left;
   margin: 5% 10%;
 
+}
+#contact{
+  margin: 5% 25%;
+}
+#contact h2{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: bold;
+  color: #2C3E50;
+  margin-bottom: 5%;
+}
+
+#contact .glyphicon-star{
+  font-size: 40px;
+  color: #2C3E50;
+  text-align:center;
+}
+#contact .dividers{
+
+  border-bottom: 3px solid #2C3E50;
+  margin-top: 20px;
+
+}
+
+#contact form{
+  margin-top: 5%;
+  font-size: 30px;
+  font-weight: lighter;
+  color: lightgray;
+}
+#contact button{
+  background-color: #53BD9D;
+  color: white;
+  padding: 3%;
 }
